# prompt-lockbox

./: .gitignore  LICENSE  README.md  base.md  old_api.py  plb.toml  propmt-metadata.md  pyproject.toml  sample-prompt-format.yml  try-sdk.ipynb  try.ipynb
docs/: ai_features.mdx  configure_llms.mdx  docs.json  how_to_contribute.mdx  index.mdx  intro.mdx  quickstart.mdx
docs/api-reference/: cli_reference.mdx  introduction.mdx  sdk_reference.mdx
docs/guide/: first.mdx  second.mdx  third.mdx
docs/usecase/: first.mdx  fourth.mdx  second.mdx  third.mdx
learn/: how-to-use-sdk.md  prompt-template-info.md  sample-prompt-format.yml
notebooks/: gen-tests.ipynb  test-sdk.ipynb
prompt_lockbox/: __init__.py  api.py  cli.py
prompt_lockbox/ai/: documenter.py  executor.py  improver.py  logging.py
prompt_lockbox/cli/: _ai.py  ai_cli.py  configure.py  main.py  manage.py  project.py  search.py
prompt_lockbox/core/: integrity.py  project.py  prompt.py  templating.py
prompt_lockbox/search/: fuzzy.py  hybrid.py  splade.py
prompts/: Customer-support-agent.v1.0.0.yml  Email-agent.v1.0.0.yml  Email-writer.v1.0.0.yml  Poem.v1.0.0.yml  Poem.v1.1.0.yml  Query-chatbot.v1.0.0.yml  Translator-to-German.v1.0.0.yml  a.v1.0.0.yml  ample.v1.0.0.yml  capital-finder.v1.0.0.yml  clea.v1.0.0.yml  gibo.v1.0.0.yml  gibo.v1.0.1.yml  hell.v1.0.0.yml  message-summarizer.v1.0.0.yml  neo.v1.0.0.yml  prompt_template_1.v1.0.0.yml  prompt_template_2.v1.0.0.yml  sample-2.v1.0.0.yml  sample-3.v1.0.0.yml  tex.v1.0.0.yml  tico.v1.0.0.yml  tika.v1.0.0.yml  user-extractor.v1.0.0.yml
(+1 files in other folders)
